force-app/main/default/objects/Job_Application__c/fields/Applicant_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Assessment__c</fullName>
    <label>Application Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong Contender</fullName>
            </value>
            <value>
                <fullName>Worth Considering</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Unlikely Fit</fullName>
            </value>
            <value>
                <fullName>Not the Right Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>