force-app/main/default/objects/Job_Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <label>Application Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>