force-app/main/default/objects/Job_Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Invited to Interview</fullName>
            </value>
            <value>
                <fullName>Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>Post-Interview Evaluation</fullName>
            </value>
            <value>
                <fullName>Pending Candidate Decision</fullName>
            </value>
            <value>
                <fullName>Candidate Hired</fullName>
            </value>
            <value>
                <fullName>Candidate Not Hired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>