force-app/main/default/objects/Job_Application__c/fields/Job_Opening_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Opening_Name__c</fullName>
    <formula>Job_Opening__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Opening Name</label>
    <type>Text</type>
</CustomField>