force-app/main/default/objects/Job_Application__c/fields/Min_Salary_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Min_Salary_Expectation__c</fullName>
    <label>Min Salary Expectation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>