force-app/main/default/objects/Job_Application__c/fields/Not_Hired_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Hired_Reason__c</fullName>
    <label>Not Hired Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offer Declined by Candidate</fullName>
            </value>
            <value>
                <fullName>Candidate Not Selected</fullName>
            </value>
            <value>
                <fullName>Candidate Withdrew Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>