force-app/main/default/objects/Job_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Application_Date__c</columns>
    <columns>NAME</columns>
    <columns>Candidate_Email__c</columns>
    <columns>Applicant_Assessment__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Not_Hired_Reason__c</columns>
    <columns>Next_Interview__c</columns>
    <columns>Min_Salary_Expectation__c</columns>
    <columns>Max_Salary_Expectation__c</columns>
    <columns>Job_Opening__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>