force-app/main/default/objects/Job_Application__c/listViews/Not_Hired.listView-meta.xml
<ListView>
    <fullName>Not_Hired</fullName>
    <columns>Application_Date__c</columns>
    <columns>NAME</columns>
    <columns>Not_Hired_Reason__c</columns>
    <columns>Applicant_Assessment__c</columns>
    <columns>Candidate_Phone__c</columns>
    <columns>Candidate_Email__c</columns>
    <columns>Job_Opening__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Candidate Not Hired</value>
    </filters>
    <label>Not Hired</label>
</ListView>