force-app/main/default/objects/Job_Application__c/listViews/Requires_Follow_Up.listView-meta.xml
<ListView>
    <fullName>Requires_Follow_Up</fullName>
    <columns>Application_Date__c</columns>
    <columns>NAME</columns>
    <columns>Applicant_Assessment__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Next_Interview__c</columns>
    <columns>Min_Salary_Expectation__c</columns>
    <columns>Max_Salary_Expectation__c</columns>
    <columns>Job_Opening__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>notEqual</operation>
        <value>Candidate Hired,Candidate Not Hired</value>
    </filters>
    <label>Requires Follow-Up</label>
</ListView>